.gitignore fix + deploy script

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
               empresarios y negocios
             </h3>
           </div>
-          <div class="mt-5" id="logos">
+          <div class="mt-5 d-flex justify-content-center" id="logos">
             <img
               src="./public/warner.avif"
               alt="logos"
