Slider - Sin animación

--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
             <img
               src="./public/warner.avif"
               alt="logos"
-              class="img-fluid"
+              class="img-fluid ms-4"
               style="max-width: 100%" />
             <img
               src="./public/deloitte.avif"
@@ -151,9 +151,17 @@
             <img
               src="./public/riteaid.avif"
               alt="logos"
-              class="img-fluid"
+              class="img-fluid ms-4"
               style="max-width: 100%" />
           </div>
+        </div>
+        <div class="container-fluid py-5 text-center">
+          <p class="text-grey mb-4 fs-5 text-center">
+            Las mejores experiencias de video en Internet, en un mismo lugar
+          </p>
+          <h3 class="display-6 fw-bold text-center w-25 mx-auto">
+            Su plataforma de video impulsada por IA
+          </h3>
         </div>
       </div>
     </main>
