--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,18 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top">
+      <nav class="navbar navbar-expand-lg fixed-top fw-bold ">
         <div class="container-fluid">
           <div
             class="collapse navbar-collapse justify-content-center"
             id="navbarNav">
-            <a class="navbar-brand m5-1 mb-3" href="#">
+            <a class="navbar-brand mb-1 d-flex justify-content-center" href="#">
               <img
                 src="./public/Vimeo_logo.png"
                 alt="VimeoLogo"
                 id="VimeoLogo" />
-            </a>
-            <ul class="navbar-nav">
+            </a>           
+             <ul class="navbar-nav">
               <li class="nav-item dropdown producto">
                 <a
                   class="nav-link"
@@ -29,7 +29,7 @@
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  Producto <i class="bi bi-chevron-down"></i>
+                  Producto <i class="bi bi-chevron-down flecha1"></i>
 
                 </a>
                 <ul class="dropdown-menu" id="dropdownMenu">
@@ -248,8 +248,9 @@
                   <li><a class="dropdown-item" href="#">Acción 2</a></li>
                   <li><a class="dropdown-item" href="#">Acción 3</a></li>
                 </ul>
-              </li>             
-               <li class="nav-item dropdown ms-5">
+              </li>   
+              <li class="ms-5 me-5"></li>          
+               <li class="nav-item dropdown ms-5" id="comunicarseConVentas">
                 <a
                   class="nav-link"
                   href="#"
@@ -260,11 +261,11 @@
                 </a>
               </li>              </li>
               <li class="nav-item">
-                <button class="btn">Iniciar Sesión</button>
+                <button class="btn fw-bold" id="iniciarSesion">Iniciar Sesión</button>
               </li>
               <li class="nav-item alzarbtn">
-                <button class="btn btn-secondary ps-4 pt-2 pb-2 pe-4">
-                  Unirse <i class="bi bi-arrow-right ms-2 btn btn-primary"></i>
+                <button class="btn ps-4 pt-2 pb-2 pe-3 fw-bold" id="btnUnirse">
+                  Unirse <div class="ms-2 d-flex align-items-center d-inline-flex" id="divFlecha"><i class="bi bi-arrow-right bt primeraFlecha"></i><i class="bi bi-arrow-right ms-1 segundaFlecha me-1 btn pt-1 pb-1 "></i></div>
                 </button>
               </li>
             </ul>
@@ -284,12 +285,12 @@
     </header>
     <main>
       <div class="container-fluid">
-        <div class="row justify-content-center mt-5">
-          <div class="col-md-6 text-center mt-5">
-            <h1 class="text-center fw-bold display-4">
+        <div class="row justify-content-center mt-5 ">
+          <div class="col-md-6 text-center mt-3 w-100">
+            <h1 class="text-center fw-bold display-1">
               Haga más con sus videos
             </h1>
-            <p class="mt-4">
+            <p class="mt-4 fs-5">
               Conozca la plataforma de video completa que puede transformar su
               manera de hacer negocios.
             </p>
@@ -298,12 +299,16 @@
                 Ver los planes
                 <i class="bi bi-arrow-right ms-2 btn btn-primary"></i>
               </button>
-              <button class="btn btn-secondary text-dark">
-                Unirse gratis
-                <i class="bi bi-arrow-right ms-2 btn btn-light"></i>
+              <button class="btn ps-4 pt-2 pb-2 pe-3 fw-bold" id="btnUnirse">
+                Unirse gratis <div class="ms-2 d-flex align-items-center d-inline-flex" id="divFlecha2"><i class="bi bi-arrow-right bt primeraFlecha"></i><i class="bi bi-arrow-right ms-1 segundaFlecha me-1 btn pt-1 pb-1 "></i></div>
               </button>
             </div>
-            <div class="mt-5 position-relative" id="laptopcontainer">
+            <div class="mt-5 position-relative mx-auto d-flex justify-content-center" id="laptopcontainer">
+              <img
+                src="./public/laptop.png"
+                alt="laptop"
+                id="laptopImg"
+                class="img-fluid position-absolute" />
               <video
                 class="img-fluid position-relative z-3"
                 id="laptop"
@@ -311,18 +316,15 @@
                 autoplay
                 muted
                 loop></video>
-              <img
-                src="./public/laptop.png"
-                alt="laptop"
-                id="laptopImg"
-                class="img-fluid w-100 position-absolute top-0 start-0" />
             </div>
+            
             <div class="mt-5"></div>
           </div>
         </div>
-        <div class="mt-5 w-10 mb-5" id="banner">
+        <section class="mt-5">
+        <div class="w-100 mb-5" id="banner">
           <div id="bannerContainer" class="">
-            <h3 class="fw-bold display-6">
+            <h3 class="fw-bold display-4">
               Su paquete completo de herramientas de video
             </h3>
             <p id="bannerTitle" class="mt-4">
@@ -335,6 +337,7 @@
             </button>
           </div>
         </div>
+        </section>
         <div
           style="
             background-color: rgba(216, 216, 216, 0.233);
