Solicitar demostración acabado - falta animación ( rama animaciones finales )

--- a/src/index.html
+++ b/src/index.html
@@ -426,23 +426,21 @@
             <div class="mt-5"></div>
           </div>
         </div>
-        <section class="mt-5">
-        <div class="w-100 mb-5" id="banner">
+        <section class="mt-5 mb-5" id="banner">
           <div id="bannerContainer" class="">
-            <h3 class="fw-bold display-4">
+            <h3 class="fw-bold display-5">
               Su paquete completo de herramientas de video
             </h3>
             <p id="bannerTitle" class="mt-4">
               Obtenga todo lo que necesita para editar, gestionar y publicar
               videos impactantes que generen resultados.
             </p>
-            <button class="btn btn-primary text-dark mt-4">
-              Solicitar una demostración
-              <i class="bi bi-arrow-right ms-2 btn btn-primary"></i>
+            <button class="mt-4 mb-5 btn ps-4 pt-2 pb-2 pe-3 fw-bold" id="btnAzul">
+             Solicitar una demostracion<div class="ms-2 d-flex align-items-center d-inline-flex" id="divFlecha"><i class="bi bi-arrow-right primeraFlechaAzul"></i><i class="bi bi-arrow-right ms-1 segundaFlecha btn pt-1 pb-1 "></i></div>
             </button>
           </div>
-        </div>
         </section>
+        <section class="mt-5">
         <div
           style="
             background-color: rgba(216, 216, 216, 0.233);
@@ -474,6 +472,7 @@
               style="max-width: 100%" />
           </div>
         </div>
+        </section>
         <div class="container-fluid py-5 text-center">
           <p class="text-grey mb-4 fs-4 text-center">
             Las mejores experiencias de video en Internet, en un mismo lugar
