Slider medio hecho - falta loop infinito

--- a/src/index.html
+++ b/src/index.html
@@ -443,34 +443,29 @@
         <section class="mt-5">
         <div
           style="
-            background-color: rgba(216, 216, 216, 0.233);
+            background-color: rgb(241, 245, 249);
             margin-top: -48px;
           ">
           <div class="d-flex justify-content-center align-items-center">
             <h3
-              class="text-center text-black mt-5 mb-5"
-              style="max-width: 30%; word-wrap: break-word; opacity: 1">
+              class="text-center text-black mt-5 mb-5 fs-2"
+              style="max-width: 40%; word-wrap: break-word;">
               La plataforma de confianza de 287 millones de creadores,
               empresarios y negocios
             </h3>
           </div>
-          <div class="mt-5 d-flex justify-content-center" id="logos">
-            <img
-              src="./public/warner.avif"
-              alt="logos"
-              class="img-fluid ms-4"
-              style="max-width: 100%" />
-            <img
-              src="./public/deloitte.avif"
-              alt="logos"
-              class="img-fluid"
-              style="max-width: 100%" />
-            <img
-              src="./public/riteaid.avif"
-              alt="logos"
-              class="img-fluid ms-4"
-              style="max-width: 100%" />
-          </div>
+          <section class="mt-2 container-fluid w-50">
+            <div class="marquee-container d-flex">
+              <marquee behavior="scroll" direction="left" scrollamount="5" loop="-1">
+                <img src="./public/deloitte.avif" alt="Deloitte" class="slider-image">
+                <img src="./public/warner.avif" alt="Warner" class="ms-3 slider-image">
+                <img src="./public/riteaid.avif" alt="Rite Aid" class="ms-4 slider-image">
+                <img src="./public/santander.png" alt="Nike" class="ms-5 slider-image">
+                <img src="./public/zendesk.png" alt="Nike" class="ms-5 slider-image">
+                <img src="./public/deloitte.avif" alt="Deloitte" class="ms-5 slider-image">
+              </marquee>
+            </div>          
+          </section>        
         </div>
         </section>
         <div class="container-fluid py-5 text-center">
