--- a/src/index.html
+++ b/src/index.html
@@ -454,18 +454,24 @@
               empresarios y negocios
             </h3>
           </div>
-          <section class="mt-2 container-fluid w-50">
-            <div class="marquee-container d-flex">
-              <marquee behavior="scroll" direction="left" scrollamount="5" loop="-1">
+          <div class="mt-2 container-fluid w-50">
+            <div class="carrousel-container">
+              <div class="d-flex" id="carrousel">
                 <img src="./public/deloitte.avif" alt="Deloitte" class="slider-image">
-                <img src="./public/warner.avif" alt="Warner" class="ms-3 slider-image">
-                <img src="./public/riteaid.avif" alt="Rite Aid" class="ms-4 slider-image">
-                <img src="./public/santander.png" alt="Nike" class="ms-5 slider-image">
-                <img src="./public/zendesk.png" alt="Nike" class="ms-5 slider-image">
-                <img src="./public/deloitte.avif" alt="Deloitte" class="ms-5 slider-image">
-              </marquee>
-            </div>          
-          </section>        
+                <img src="./public/warner.avif" alt="Warner" class="slider-image">
+                <img src="./public/riteaid.avif" alt="Rite Aid" class="slider-image">
+                <img src="./public/santander.png" alt="Santander" class="slider-image">
+                <img src="./public/zendesk.png" alt="Zendesk" class="slider-image">
+                <!-- Duplicamos las imágenes para que la animación sea infinita -->
+                <img src="./public/deloitte.avif" alt="Deloitte" class="slider-image">
+                <img src="./public/warner.avif" alt="Warner" class="slider-image">
+                <img src="./public/riteaid.avif" alt="Rite Aid" class="slider-image">
+                <img src="./public/santander.png" alt="Santander" class="slider-image">
+                <img src="./public/zendesk.png" alt="Zendesk" class="slider-image">
+              </div>
+            </div>
+          </div>
+            
         </div>
         </section>
         <div class="container-fluid py-5 text-center">
