--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vimeo - Luis López Puig</title>
-    <link rel="stylesheet" href="./styles/custom.scss" />
-    <link rel="stylesheet" href="./styles/bootstrap.scss" />
+    <link rel="stylesheet" href="../src/styles/custom.scss" />
+    <link rel="stylesheet" href="../src/styles/bootstrap.scss" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
   <body>
