Animacion casos de uso por acabar

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vimeo - Luis López Puig</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="../src/styles/custom.scss" />
     <link rel="stylesheet" href="../src/styles/bootstrap.scss" />
     <script
@@ -785,7 +790,7 @@
             </div>
           </div>
         </section>
-        <section class="casos-de-uso">
+        <section class="casos-de-uso1">
           <div class="container-fluid py-5 text-center">
             <p class="text-grey mb-4 fs-4 text-center">
               Las mejores experiencias de video en Internet, en un mismo lugar
@@ -930,9 +935,65 @@
             </div>
           </div>
         </section>
+        <section class="casos-de-uso2">
+          <div class="container-fluid py-5 text-center">
+            <h3 class="text-grey mb-3 fs-3 text-center">Casos de uso</h3>
+            <h3 class="display-5 fw-bold text-center w-50 mx-auto">
+              Cómo utilizan Vimeo los clientes
+            </h3>
+          </div>
+          <div class="col-md-12 container mx-auto row">
+            <div class="col-md-4">
+              <div class="h-100 casosDeUso" id="casosDeUso1">
+                <img src="./public/casosDeUso1.avif" alt="Creación y edición" />
+                <div
+                  class="d-flex flex-column align-items-start texto-Centrado">
+                  <h2 class="fs-5">Morgan Cooper</h2>
+                  <p class="fw-bold text-grey">
+                    Este director destacado, tres veces elegido por el personal,
+                    comparte sus cortometrajes profundamente personales e
+                    impactantes con Vimeo.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="h-100 casosDeUso" id="casosDeUso2">
+                <img src="./public/casosDeUso2.avif" alt="Creación y edición" />
+                <div
+                  class="d-flex flex-column align-items-start texto-Centrado">
+                  <h2 class="fs-5">Vermicular</h2>
+                  <p class="fw-bold text-grey">
+                    La inversión en video de Vermicular impulsa el alcance
+                    global y crea activos de marketing reutilizables.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="h-100 casosDeUso" id="casosDeUso3">
+                <img src="./public/casosDeUso3.avif" alt="Creación y edición" />
+                <div
+                  class="d-flex flex-column align-items-start texto-Centrado">
+                  <h2 class="fs-5">Stellantis</h2>
+                  <p class="fw-bold text-grey">
+                    Con 300 000 empleados en todo el mundo, Stellantis confía en
+                    Vimeo para su enseñanza virtual basada en video a nivel
+                    mundial.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+        </div>
+
+    </footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
